--- a/deps/rabbit_common/Makefile
+++ b/deps/rabbit_common/Makefile
@@ -26,7 +26,7 @@ define HEX_TARBALL_EXTRA_METADATA
 endef
 
 LOCAL_DEPS = compiler crypto public_key sasl ssl syntax_tools tools xmerl
-DEPS = thoas recon credentials_obfuscation
+DEPS = thoas recon credentials_obfuscation khepri
 
 dep_credentials_obfuscation = hex 3.1.0
 dep_khepri = git https://github.com/rabbitmq/khepri.git master
