--- a/deps/rabbit_common/Makefile
+++ b/deps/rabbit_common/Makefile
@@ -29,7 +29,7 @@ LOCAL_DEPS = compiler crypto public_key sasl ssl syntax_tools tools xmerl
 DEPS = thoas recon credentials_obfuscation khepri
 
 dep_credentials_obfuscation = hex 3.2.0
-dep_khepri = git https://github.com/rabbitmq/khepri.git main
+dep_khepri = git https://github.com/rabbitmq/khepri.git c41d3399fa2266c95a4ad00605a47aebebb52059
 
 # Variables and recipes in development.*.mk are meant to be used from
 # any Git clone. They are excluded from the files published to Hex.pm.
