--- a/deps/rabbit/Makefile
+++ b/deps/rabbit/Makefile
@@ -126,9 +126,9 @@ define PROJECT_ENV
 			{credentials_obfuscation_fallback_secret, <<"nocookie">>},
       {dead_letter_worker_consumer_prefetch, 32},
       {dead_letter_worker_publisher_confirm_timeout, 180000},
-
 			%% EOL date for the current release series, if known/announced
-			{release_series_eol_date, none}
+			{release_series_eol_date, none},
+            {khepri_migration_batch, 1000}
 	  ]
 endef
 
