Khepri: add new test suites to bazel

--- a/deps/rabbit/BUILD.bazel
+++ b/deps/rabbit/BUILD.bazel
@@ -291,6 +291,11 @@ suites = [
     ),
     rabbitmq_integration_suite(
         PACKAGE,
+        name = "bindings_SUITE",
+        size = "medium",
+    ),
+    rabbitmq_integration_suite(
+        PACKAGE,
         name = "channel_interceptor_SUITE",
         size = "medium",
         additional_srcs = [
@@ -424,6 +429,11 @@ suites = [
     ),
     rabbitmq_integration_suite(
         PACKAGE,
+        name = "exchanges_SUITE",
+        size = "small",
+    ),
+    rabbitmq_integration_suite(
+        PACKAGE,
         name = "feature_flags_SUITE",
         size = "large",
         flaky = True,
@@ -457,6 +467,11 @@ suites = [
         PACKAGE,
         name = "lazy_queue_SUITE",
         size = "medium",
+    ),
+    rabbitmq_integration_suite(
+        PACKAGE,
+        name = "listeners_SUITE",
+        size = "small",
     ),
     rabbitmq_integration_suite(
         PACKAGE,
