Khepri: update Khepri version

--- a/deps/rabbit/Makefile
+++ b/deps/rabbit/Makefile
@@ -151,7 +151,7 @@ dep_syslog = git https://github.com/schlagert/syslog 4.0.0
 dep_osiris = git https://github.com/rabbitmq/osiris main
 dep_systemd = hex 0.6.1
 dep_seshat = hex 0.3.2
-dep_khepri = git https://github.com/rabbitmq/khepri.git ec78e5dc9b596aa976820781600d84068e418e63
+dep_khepri = git https://github.com/rabbitmq/khepri.git main
 
 define usage_xml_to_erl
 $(subst __,_,$(patsubst $(DOCS_DIR)/rabbitmq%.1.xml, src/rabbit_%_usage.erl, $(subst -,_,$(1))))
