Support Idp initiated logon in mgt ui with Oauth
Configure preferred username from a token
Make client_secret optional

--- a/.github/workflows/test-selenium.yaml
+++ b/.github/workflows/test-selenium.yaml
@@ -91,7 +91,7 @@ jobs:
 
     - name: Run Suites
       run: |
-        ${SELENIUM_DIR}/run-suites.sh
+        RABBITMQ_DOCKER_IMAGE=bazel/packaging/docker-image:rabbitmq ${SELENIUM_DIR}/run-suites.sh
 
     - name: Upload Test Artifacts
       if: always()
