--- a/deps/rabbitmq_management/selenium/test/oauth/rabbitmq.config
+++ b/deps/rabbitmq_management/selenium/test/oauth/rabbitmq.config
@@ -7,12 +7,12 @@
       {enable_uaa, true},
       {oauth_enabled, true},
       {oauth_client_id, "rabbit_client_code"},
-      {oauth_client_secret, "rabbit_client_code"},
+      %{oauth_client_secret, "rabbit_client_code"},
       {oauth_provider_url, "http://uaa:8080"}
   ]},
   {rabbitmq_auth_backend_oauth2, [
     {resource_server_id, <<"rabbitmq">>},
-    {extra_scopes_source, <<"extra_scope">>},
+    {preferred_username_claims, [<<"user_name">>]},
     {key_config, [
       {default_key, <<"legacy-token-key">>},
       {signing_keys,
