--- a/deps/rabbitmq_management/selenium/test/oauth/uaa-with-mgt-prefix/uaa.yml
+++ b/deps/rabbitmq_management/selenium/test/oauth/uaa-with-mgt-prefix/uaa.yml
@@ -99,6 +99,7 @@ scim:
     - rabbit_admin|rabbit_admin|scim.read,openid,rabbitmq.read:*/*,rabbitmq.write:*/*,rabbitmq.configure:*/*,rabbitmq.tag:administrator
     - rabbitmq_management|rabbitmq_management|scim.read,openid,rabbitmq.read:*/*,rabbitmq.write:*/*,rabbitmq.configure:*/*,rabbitmq.tag:management
     - rabbit_monitor|rabbit_monitor|scim.read,openid,rabbitmq.tag:monitoring
+    - rabbit_no_management|rabbit_no_management|scim.read,openid,rabbitmq.read:*/*
   groups:
     'rabbitmq.read:*/*': Read all
     'rabbitmq.write:*/*': Write all
@@ -133,6 +134,7 @@ oauth:
       authorities: uaa.resource,rabbitmq
       redirect-uri: http://rabbitmq:15672/my-prefix/another-prefix/
       autoapprove: true
+      allowpublic: true
 
     mgt_api_client_2:
       id: mgt_api_client_2
