Support path_prefix in /login url
For OAuth2 idp initiated logon

--- a/deps/rabbitmq_management/selenium/test/oauth/rabbitmq-idp-initiated-with-prefix.config
+++ b/deps/rabbitmq_management/selenium/test/oauth/rabbitmq-idp-initiated-with-prefix.config
@@ -6,6 +6,7 @@
       {login_session_timeout, 1},   %% in minutes
       {oauth_enabled, true},
       {oauth_initiated_logon_type, idp_initiated},
+      {path_prefix, "/my-prefix/another-prefix"},
       {oauth_provider_url, "http://fakeportal:3000"}
   ]},
   {rabbitmq_auth_backend_oauth2, [
