--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -10,7 +10,7 @@ bazel_dep(
 
 bazel_dep(
     name = "bazel_skylib",
-    version = "1.2.0",
+    version = "1.3.0",
 )
 
 bazel_dep(
@@ -26,6 +26,14 @@ bazel_dep(
 bazel_dep(
     name = "rules_erlang",
     version = "3.8.3",
+)
+
+archive_override(
+    module_name = "rules_erlang",
+    urls = [
+        "https://github.com/rabbitmq/rules_erlang/archive/refs/heads/experimental-gazelle-extension.zip"
+    ],
+    strip_prefix = "rules_erlang-experimental-gazelle-extension",
 )
 
 erlang_config = use_extension(
