--- a/deps/rabbitmq_trust_store/BUILD.bazel
+++ b/deps/rabbitmq_trust_store/BUILD.bazel
@@ -87,26 +87,22 @@ rabbitmq_run(
 
 PACKAGE = "deps/rabbitmq_trust_store"
 
-suites = [
-    rabbitmq_integration_suite(
-        PACKAGE,
-        name = "config_schema_SUITE",
-    ),
-    rabbitmq_integration_suite(
-        PACKAGE,
-        name = "system_SUITE",
-        flaky = True,
-        runtime_deps = [
-            "//deps/trust_store_http:erlang_app",
-            "@ct_helper//:erlang_app",
-        ],
-    ),
-]
-
-assert_suites(
-    suites,
-    glob(["test/**/*_SUITE.erl"]),
+rabbitmq_integration_suite(
+    PACKAGE,
+    name = "config_schema_SUITE",
 )
+
+rabbitmq_integration_suite(
+    PACKAGE,
+    name = "system_SUITE",
+    flaky = True,
+    runtime_deps = [
+        "//deps/trust_store_http:erlang_app",
+        "@ct_helper//:erlang_app",
+    ],
+)
+
+assert_suites()
 
 alias(
     name = "rabbitmq_trust_store",
