--- a/deps/amqp_client/BUILD.bazel
+++ b/deps/amqp_client/BUILD.bazel
@@ -96,31 +96,27 @@ rabbitmq_run(
     home = ":broker-for-tests-home",
 )
 
-suites = [
-    rabbitmq_integration_suite(
-        "deps/amqp_client",
-        name = "system_SUITE",
-        size = "large",
-        runtime_deps = [
-            "@meck//:erlang_app",
-        ],
-    ),
-    rabbitmq_suite(
-        name = "unit_SUITE",
-        size = "small",
-        runtime_deps = [
-            "//deps/rabbit:erlang_app",
-        ],
-        deps = [
-            "//deps/rabbit_common:erlang_app",
-        ],
-    ),
-]
-
-assert_suites(
-    suites,
-    glob(["test/**/*_SUITE.erl"]),
+rabbitmq_integration_suite(
+    "deps/amqp_client",
+    name = "system_SUITE",
+    size = "large",
+    runtime_deps = [
+        "@meck//:erlang_app",
+    ],
 )
+
+rabbitmq_suite(
+    name = "unit_SUITE",
+    size = "small",
+    runtime_deps = [
+        "//deps/rabbit:erlang_app",
+    ],
+    deps = [
+        "//deps/rabbit_common:erlang_app",
+    ],
+)
+
+assert_suites()
 
 alias(
     name = "amqp_client",
