--- a/deps/rabbitmq_amqp1_0/BUILD.bazel
+++ b/deps/rabbitmq_amqp1_0/BUILD.bazel
@@ -77,60 +77,60 @@ broker_for_integration_suites()
 
 PACKAGE = "deps/rabbitmq_amqp1_0"
 
-suites = [
-    rabbitmq_integration_suite(
-        PACKAGE,
-        name = "amqp10_client_SUITE",
-        size = "medium",
-        runtime_deps = [
-            "//deps/amqp10_client:erlang_app",
-        ],
-    ),
-    rabbitmq_integration_suite(
-        PACKAGE,
-        name = "command_SUITE",
-        size = "medium",
-        runtime_deps = [
-            "//deps/amqp10_client:erlang_app",
-        ],
-        deps = [
-            "//deps/amqp10_common:erlang_app",
-        ],
-    ),
-    rabbitmq_integration_suite(
-        PACKAGE,
-        name = "proxy_protocol_SUITE",
-        size = "medium",
-    ),
-    rabbitmq_integration_suite(
-        PACKAGE,
-        name = "system_SUITE",
-        flaky = True,
-        tags = [
-            "dotnet",
-            "exclusive",
-        ],
-        test_env = {
-            "TMPDIR": "$TEST_TMPDIR",
-        },
-    ),
-    rabbitmq_integration_suite(
-        PACKAGE,
-        name = "config_schema_SUITE",
-    ),
-    rabbitmq_suite(
-        name = "unit_SUITE",
-        size = "small",
-        deps = [
-            "//deps/amqp10_common:erlang_app",
-        ],
-    ),
-]
-
-assert_suites(
-    suites,
-    glob(["test/**/*_SUITE.erl"]),
+rabbitmq_integration_suite(
+    PACKAGE,
+    name = "amqp10_client_SUITE",
+    size = "medium",
+    runtime_deps = [
+        "//deps/amqp10_client:erlang_app",
+    ],
 )
+
+rabbitmq_integration_suite(
+    PACKAGE,
+    name = "command_SUITE",
+    size = "medium",
+    runtime_deps = [
+        "//deps/amqp10_client:erlang_app",
+    ],
+    deps = [
+        "//deps/amqp10_common:erlang_app",
+    ],
+)
+
+rabbitmq_integration_suite(
+    PACKAGE,
+    name = "proxy_protocol_SUITE",
+    size = "medium",
+)
+
+rabbitmq_integration_suite(
+    PACKAGE,
+    name = "system_SUITE",
+    flaky = True,
+    tags = [
+        "dotnet",
+        "exclusive",
+    ],
+    test_env = {
+        "TMPDIR": "$TEST_TMPDIR",
+    },
+)
+
+rabbitmq_integration_suite(
+    PACKAGE,
+    name = "config_schema_SUITE",
+)
+
+rabbitmq_suite(
+    name = "unit_SUITE",
+    size = "small",
+    deps = [
+        "//deps/amqp10_common:erlang_app",
+    ],
+)
+
+assert_suites()
 
 alias(
     name = "rabbitmq_amqp1_0",
