--- a/deps/rabbitmq_federation_management/BUILD.bazel
+++ b/deps/rabbitmq_federation_management/BUILD.bazel
@@ -67,17 +67,12 @@ broker_for_integration_suites()
 
 PACKAGE = "deps/rabbitmq_federation_management"
 
-suites = [
-    rabbitmq_integration_suite(
-        PACKAGE,
-        name = "federation_mgmt_SUITE",
-    ),
-]
-
-assert_suites(
-    suites,
-    glob(["test/**/*_SUITE.erl"]),
+rabbitmq_integration_suite(
+    PACKAGE,
+    name = "federation_mgmt_SUITE",
 )
+
+assert_suites()
 
 alias(
     name = "rabbitmq_federation_management",
