--- a/deps/rabbitmq_shovel_management/BUILD.bazel
+++ b/deps/rabbitmq_shovel_management/BUILD.bazel
@@ -78,27 +78,23 @@ rabbitmq_run(
 
 PACKAGE = "deps/rabbitmq_shovel_management"
 
-suites = [
-    rabbitmq_integration_suite(
-        PACKAGE,
-        name = "http_SUITE",
-    ),
-    rabbitmq_suite(
-        name = "rabbit_shovel_mgmt_SUITE",
-        runtime_deps = [
-            "@meck//:erlang_app",
-        ],
-        deps = [
-            "//deps/rabbit_common:erlang_app",
-            "//deps/rabbitmq_management_agent:erlang_app",
-        ],
-    ),
-]
-
-assert_suites(
-    suites,
-    glob(["test/**/*_SUITE.erl"]),
+rabbitmq_integration_suite(
+    PACKAGE,
+    name = "http_SUITE",
 )
+
+rabbitmq_suite(
+    name = "rabbit_shovel_mgmt_SUITE",
+    runtime_deps = [
+        "@meck//:erlang_app",
+    ],
+    deps = [
+        "//deps/rabbit_common:erlang_app",
+        "//deps/rabbitmq_management_agent:erlang_app",
+    ],
+)
+
+assert_suites()
 
 alias(
     name = "rabbitmq_shovel_management",
