--- a/deps/rabbitmq_stream_common/BUILD.bazel
+++ b/deps/rabbitmq_stream_common/BUILD.bazel
@@ -36,16 +36,11 @@ dialyze(
     plt = "//:base_plt",
 )
 
-suites = [
-    rabbitmq_suite(
-        name = "rabbit_stream_core_SUITE",
-    ),
-]
-
-assert_suites(
-    suites,
-    glob(["test/**/*_SUITE.erl"]),
+rabbitmq_suite(
+    name = "rabbit_stream_core_SUITE",
 )
+
+assert_suites()
 
 alias(
     name = "rabbitmq_stream_common",
