--- a/deps/rabbitmq_stream_management/BUILD.bazel
+++ b/deps/rabbitmq_stream_management/BUILD.bazel
@@ -76,17 +76,12 @@ rabbitmq_run(
 
 PACKAGE = "deps/rabbitmq_stream_management"
 
-suites = [
-    rabbitmq_integration_suite(
-        PACKAGE,
-        name = "http_SUITE",
-    ),
-]
-
-assert_suites(
-    suites,
-    glob(["test/**/*_SUITE.erl"]),
+rabbitmq_integration_suite(
+    PACKAGE,
+    name = "http_SUITE",
 )
+
+assert_suites()
 
 alias(
     name = "rabbitmq_stream_management",
