--- a/deps/rabbitmq_management_agent/BUILD.bazel
+++ b/deps/rabbitmq_management_agent/BUILD.bazel
@@ -43,10 +43,6 @@ EXTRA_APPS = [
     "public_key",
 ]
 
-BUILD_DEPS = [
-    "//deps/rabbitmq_cli:rabbitmqctl",
-]
-
 DEPS = [
     "//deps/rabbit_common:erlang_app",
     "//deps/rabbit:erlang_app",
@@ -95,7 +91,11 @@ rabbitmq_app(
 )
 
 xref(
-    additional_libs = BUILD_DEPS,
+    name = "xref",
+    additional_libs = [
+        "//deps/rabbitmq_cli:rabbitmqctl",  #keep
+    ],
+    target = ":erlang_app",
 )
 
 plt_apps = list(EXTRA_APPS)
