--- a/deps/rabbitmq_mqtt/BUILD.bazel
+++ b/deps/rabbitmq_mqtt/BUILD.bazel
@@ -48,10 +48,6 @@ APP_ENV = """[
 	    {sparkplug, false}
 	  ]"""
 
-BUILD_DEPS = [
-    "//deps/rabbitmq_cli:rabbitmqctl",
-]
-
 DEPS = [
     "//deps/amqp_client:erlang_app",
     "//deps/rabbit_common:erlang_app",
@@ -97,7 +93,11 @@ rabbitmq_app(
 )
 
 xref(
-    additional_libs = BUILD_DEPS,
+    name = "xref",
+    additional_libs = [
+        "//deps/rabbitmq_cli:rabbitmqctl",  #keep
+    ],
+    target = ":erlang_app",
 )
 
 plt(
