--- a/deps/rabbitmq_web_mqtt_examples/BUILD.bazel
+++ b/deps/rabbitmq_web_mqtt_examples/BUILD.bazel
@@ -62,7 +62,10 @@ rabbitmq_app(
     ],
 )
 
-xref()
+xref(
+    name = "xref",
+    target = ":erlang_app",
+)
 
 dialyze(
     dialyzer_opts = RABBITMQ_DIALYZER_OPTS,
