--- a/deps/amqp10_common/BUILD.bazel
+++ b/deps/amqp10_common/BUILD.bazel
@@ -87,7 +87,10 @@ rabbitmq_app(
     beam_files = [":beam_files"],
 )
 
-xref()
+xref(
+    name = "xref",
+    target = ":erlang_app",
+)
 
 dialyze(
     plt = "//:base_plt",
