--- a/deps/rabbitmq_aws/BUILD.bazel
+++ b/deps/rabbitmq_aws/BUILD.bazel
@@ -62,9 +62,11 @@ rabbitmq_app(
 )
 
 xref(
+    name = "xref",
     additional_libs = [
-        "//deps/rabbit_common:erlang_app",
+        "//deps/rabbit_common:erlang_app",  #keep
     ],
+    target = ":erlang_app",
 )
 
 plt(
