--- a/deps/rabbitmq_ct_helpers/BUILD.bazel
+++ b/deps/rabbitmq_ct_helpers/BUILD.bazel
@@ -45,15 +45,17 @@ alias(
 )
 
 xref(
+    name = "xref",
     additional_libs = [
-        "//bazel/elixir:erlang_app",
-        "//deps/rabbitmq_cli:rabbitmqctl",
-        "//deps/rabbit_common:erlang_app",
-        "//deps/rabbit:erlang_app",
-        "//deps/rabbit/apps/rabbitmq_prelaunch:erlang_app",
-        "//deps/rabbitmq_management_agent:erlang_app",
-        "@proper//:erlang_app",
+        "//bazel/elixir:erlang_app",  #keep
+        "//deps/rabbitmq_cli:rabbitmqctl",  #keep
+        "//deps/rabbit_common:erlang_app",  #keep
+        "//deps/rabbit:erlang_app",  #keep
+        "//deps/rabbit/apps/rabbitmq_prelaunch:erlang_app",  #keep
+        "//deps/rabbitmq_management_agent:erlang_app",  #keep
+        "@proper//:erlang_app",  #keep
     ],
+    target = ":erlang_app",
 )
 
 plt(
