--- a/deps/rabbitmq_shovel/BUILD.bazel
+++ b/deps/rabbitmq_shovel/BUILD.bazel
@@ -40,10 +40,6 @@ EXTRA_APPS = [
     "crypto",
 ]
 
-BUILD_DEPS = [
-    "//deps/rabbitmq_cli:rabbitmqctl",
-]
-
 DEPS = [
     "//deps/amqp_client:erlang_app",
     "//deps/rabbit_common:erlang_app",
@@ -89,7 +85,11 @@ rabbitmq_app(
 )
 
 xref(
-    additional_libs = BUILD_DEPS,
+    name = "xref",
+    additional_libs = [
+        "//deps/rabbitmq_cli:rabbitmqctl",  #keep
+    ],
+    target = ":erlang_app",
 )
 
 plt(
