--- a/deps/rabbitmq_web_stomp_examples/BUILD.bazel
+++ b/deps/rabbitmq_web_stomp_examples/BUILD.bazel
@@ -57,7 +57,10 @@ rabbitmq_app(
     ],
 )
 
-xref()
+xref(
+    name = "xref",
+    target = ":erlang_app",
+)
 
 dialyze(
     dialyzer_opts = RABBITMQ_DIALYZER_OPTS,
